<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context="com.box.box.customer.exress.functionfragment.sendme.SendmePayActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sendmepay_order_info" />

                <TextView
                    android:id="@+id/sendmepay_order_tv_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="顺丰123456789012"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sendmepay_order_jjr" />

                <TextView
                    android:id="@+id/sendmepay_order_tv_jjr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="金三胖"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sendmepay_order_sjr" />

                <TextView
                    android:id="@+id/sendmepay_order_tv_sjr"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="金二胖"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sendmepay_order_phone" />

                <TextView
                    android:id="@+id/sendmepay_order_tv_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="4008823823"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sendmepay_order_boxid" />

                <TextView
                    android:id="@+id/sendmepay_order_tv_boxid"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="12"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sendmepay_order_address" />

                <TextView
                    android:id="@+id/sendmepay_order_tv_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="山的那边海的那边"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sendmepay_order_pay" />

                <TextView
                    android:id="@+id/sendmepay_order_tv_pay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="支付宝"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sendmepay_order_weight" />

                <TextView
                    android:id="@+id/sendmepay_order_tv_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="1T"
                    android:textSize="18sp"
                    android:textColor="@android:color/black"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/sendmepay_order_money" />

                <TextView
                    android:id="@+id/sendmepay_order_tv_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="3.1415926元"
                    android:textSize="18sp"
                    android:textColor="@android:color/holo_red_light"
                    android:background="@null" />
            </LinearLayout>

            <Button
                android:id="@+id/sendmepay_order_bt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/want_send_button_shape"
                android:text="确认支付"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
