<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/backgroud"
    tools:context="com.box.box.customer.me.function.EditInformationActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_information_name" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:cursorVisible="true"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_information_gender" />

                <Button
                    android:id="@+id/edit_information_gender_man"
                    android:layout_width="72dp"
                    android:layout_height="36dp"
                    android:background="@drawable/want_send_button_shape_on"
                    android:textColor="@color/want_send_button_on"
                    android:layout_marginRight="10dp"
                    android:text="男" />

                <Button
                    android:id="@+id/edit_information_gender_women"
                    android:layout_width="72dp"
                    android:layout_height="36dp"
                    android:background="@drawable/want_send_button_shape_off"
                    android:textColor="@color/want_send_button_off"
                    android:text="女" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_information_nowplace" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:cursorVisible="true"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_information_birthday" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_information_code" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:cursorVisible="true"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_information_email" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:cursorVisible="true"
                    android:background="@null" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:background="@color/my_info_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:layout_gravity="center_vertical"
                    android:text="@string/edit_information_about" />

                <EditText
                    android:id="@+id/want_send_et_remarks"
                    android:padding="4dp"
                    android:layout_width="match_parent"
                    android:layout_height="96dp"
                    android:layout_marginTop="8dp"
                    android:layout_gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:cursorVisible="true"
                    android:gravity="top"
                    android:background="@drawable/want_send_remarks" />

                <Button
                    android:id="@+id/want_send_bt_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/want_send_button_shape"
                    android:text="确认" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>
